--- a/styling_components/src/index.css
+++ b/styling_components/src/index.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Lato:wght@400;700&display=swap");
 
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 * {
   box-sizing: border-box;
 }
@@ -18,60 +24,8 @@ body {
 }
 
 form {
-  width: 90%;
-  max-width: 40rem;
-  margin: 3rem auto;
-  padding: 2rem;
   background: linear-gradient(180deg, #253c3c, #1d4949);
-  border-radius: 8px;
   box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.5);
+
 }
 
-div {
-    display: inline-block;
-    width: 45%;
-}
-
-div + div {
-    margin-left: 20px;
-}
-
-label {
-  display: block;
-  font-size: 0.8rem;
-  margin-bottom: 0.2rem;
-  color: #9bafaf;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-input {
-  display: block;
-  width: 100%;
-  max-width: 15rem;
-  padding: 0.5rem;
-  font-size: 1rem;
-  border-radius: 4px;
-  border: 1px solid #758a8a;
-  background-color: #869999;
-  color: #142020;
-  margin-top: 10px;
-}
-
-button {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  border-radius: 4px;
-  border: none;
-  background-color: #147b73;
-  color: #d9e2f1;
-  cursor: pointer;
-  display: block;
-  margin-left: 330px;
-  margin-top: 30px;
-}
-
-button:hover,
-button:focus {
-  background-color: #319890;
-}
